# crewai__zapier__actions

./: README.md
zapier/: README.md  pyproject.toml  report.md  report_reporter.md  report_research.md  trained_agents_data.pkl  training_data.pkl  users.txt
zapier/src/zapier/: crew.py  main.py
zapier/src/zapier/config/: agents.yaml
zapier/src/zapier/tools/: custom_tool.py
