[project]
name = "zapier"
version = "0.1.0"
description = "zapier using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
zapier = "zapier.main:run"
run_crew = "zapier.main:run"
train = "zapier.main:train"
replay = "zapier.main:replay"
test = "zapier.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
